# aeroprint

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  aeroprint.bash  aeroprint.sh  aeroprint_setup.bash  aeroprint_setup.h  aeroprint_setup.sh  app.py  command.json  docker-compose.yaml  docker-compose.yml  fig8.py  hello.py  package-lock.json  package.json  readme.md  settings.json  setup.sh  snapcraft.yaml  stage_listener.py  status.json  test.bash  tox.ini  web_command_listener.py  web_size_listener.py
src/host/: docker-compose.yaml  package.xml  pyproject copy.toml  pyproject.toml  setup.cfg  setup.py
src/host/exec/: Dockerfile  entrypoint.sh  requirements.txt  settings.json
src/host/host/: aeroprint_gui.py  database_control.py  file_manager.py  gui_fcu_plugin.py  gui_fcu_plugin_test.py  launch_gui.py  main_gui_example.py  mesher.py  pc_collection.py  pc_post_processor  pc_post_processor.py  pc_processor.py  posed_dumper.py  printer.bash  printer.py  prusa_upload.py  slicer_config.ini  test_node.py  test_publisher.py  test_sub.py
src/host/host/gui/: main_gui_example.py  scroll_container.py
src/host/host/gui/resources/: custom_widgets.py  settings_utility.py  style.qss
src/host/host/web/: app.py  dev.html  file_manager.py  flask_server_node.py  helix.html  index.html  test_node.py
src/host/host/web/static/: app.py  command.json  file_browser.js  main.css  main.js  web_command_listener.py
src/host/host/web/templates/: dev.html  files.html  goop.html  (+1 more)
src/host/launch/: host_launch.py  host_test_launch.py  web_test.launch.py
(+309 files in other folders)
