<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>host</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ryankuederle@icloud.com">ryan</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!--sqlite3 is included in python3-->
  <exec_depend>python-git</exec_depend>
  <exec_depend>python-rosdep</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-pandas</exec_depend>
  <exec_depend>open3d-python</exec_depend>
  <exec_depend>pip</exec_depend>
  <exec_depend>trimesh</exec_depend>
  <exec_depend>prusalinkpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
